Fixed spacing on dropdowns

--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -2584,6 +2584,10 @@ input[name="subject"] {
       font-size: em(13);
     }
   }
+
+  div.special-exam-header {
+    padding-left: 25px;
+  }
 }
 
 .special-allowance-container,
